# pyrexmol

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  noxfile.py  pyproject.toml
examples/: basic_vectors2.py
src/: lib.rs
src/math/: core.rs  vector2.rs
src/physics/: kinematics.rs
src/pyrexmol/: __init__.py  _core.pyi
src/pyrexmol/math/: __init__.py  __init__.pyi
src/pyrexmol/physics/: kinematics.py  kinematics.pyi
