[project]
name = "pyrexmol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pyrexmol = "pyrexmol:main"

[tool.maturin]
python-packages = ["pyrexmol"]
python-source = "src"
module-name = "pyrexmol._core"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.9.4",
]
